--- a/src/package.json
+++ b/src/package.json
@@ -10,9 +10,10 @@
   "author": "Tim Rodger tim.rodger@gmail.com",
   "dependencies": {
     "underscore": "~1.8.*",
-    "winston": "~0.8.3",
+    "winston": "~2.1.1",
     "rabbit.js": "~0.4.2",
-    "forever": "~0.14.1"
+    "forever": "~0.15.1",
+    "async": "~1.5.2"
   },
   "devDependencies": {
     "should": "~4.3.0",
