--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,7 @@
     "winston": "~2.1.1",
     "rabbit.js": "~0.4.2",
     "forever": "~0.15.1",
+    "request": "~2.49.0",
     "async": "~1.5.2"
   },
   "devDependencies": {
