--- a/src/package.json
+++ b/src/package.json
@@ -14,6 +14,7 @@
     "rabbit.js": "~0.4.2",
     "forever": "~0.15.1",
     "request": "~2.49.0",
+    "hawk" : "3.1.3",
     "async": "~1.5.2"
   },
   "devDependencies": {
